<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Swibo</string>
    <string name="action_settings">Settings</string>
    <string name="action_player1">Edit Player 1 port</string>
    <string name="action_player2">Edit Player 2 port</string>
    <string name="action_ip">Edit IP-address</string>
    <string name="action_setDefault">Default setting</string>
    <string name="action_website">Swibo website</string>

</resources>
